--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -3,6 +3,7 @@ StackLayout {
     margin-right: 30;
     padding-bottom: 15;
     background-color: white;
+    border-radius: 20px 20px 20px 20px;
 }
 Image {
     margin-top: 5;
@@ -14,7 +15,7 @@ Button, TextField {
     margin-bottom: 10;
 }
 .submit-button {
-    background-color: #CB1D00;
+    background-color: #3BA642;
     color: white;
-    margin-top: 20;
+    margin-top: 40;
 }
